--- a/4.html
+++ b/4.html
@@ -25,7 +25,7 @@
                 <h1 class="glow"> A Heartfelt Confession 💙</h1> <font color="white" >
                     I’m not sure where to begin, but I’ll do my best to express what’s been on my heart. From the very first moment I met you,
                      even though it was brief, you’ve been in my thoughts more than anything else. There’s something about you that has 
-                     stayed with me, and I find myself thinking about you often, har din tum mere sapne me aati ho😭. I’ve wanted to share how I feel, but I didn’t know how to 
+                     stayed with me, and I find myself thinking about you often, har roj tum mere sapne me aati ho😭. I’ve wanted to share how I feel, but I didn’t know how to 
                      put it into words. So, I decided to create this website as a way to express something I’ve kept inside for quite some
                       time. You’ve inspired me in more ways than you might even realize, and that’s something I feel deeply grateful for. 
                       I don’t expect anything in return, but there’s one thing I wanted to say to you: You are someone incredibly special 
