--- a/3.html
+++ b/3.html
@@ -22,7 +22,7 @@
 
     <!-- Content Section -->
     <section class="dream-page">
-        <h1 class="glow">A Little Dream of Me ✨</h1>
+        <h1 class="glow">A Dream of Mine ✨</h1>
         <div class="content-box fade-in"> 
             <p>I don’t know if you believe in *destiny* or *small moments that change everything*, but meeting you made me think about both. <br>
 
@@ -32,7 +32,7 @@
                 
                 Life is a journey, and I hope one day, if you’re okay with it, you might let me walk a little part of it with you.
                 
-                Until then, here’s me, just wishing for the best… and hoping you smile reading this.
+                Until then, here is me, just wishing for the best… and hoping you smile reading this.
                 <br> Don't forget to Click on every "For You" button at the top right of each page.
             </p>
         </div>
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <!-- Footer -->
     <footer>
-        <p>Made with ❤️ and Respect</p>
+        <p>Made with ❤️ by your admirer </p>
     </footer>
 </body>
 </html>
