--- a/5.html
+++ b/5.html
@@ -26,7 +26,7 @@
         <div class="content-box">
             <p class="fade-in">Dearest TANIA❤️! <br>
 
-                I wanted to create something special to show how much I admire you. As someone who’s just starting their programming journey, I poured my heart into building a website just for you—every line of code, every design choice, and even a little form with questions I’d love for you to answer. It took me 4 days and nights (and countless cups of coffee ☕ and snacks also) to bring it to life, but every second was worth it if it helps us connect.
+                I wanted to create something special to show how much I admire you, I wish I had your pictures to make this website more attractive. As someone who’s just starting their programming journey, I poured my heart into building a website just for you—every line of code, every design choice, and even a little form with questions I’d love for you to answer. It took me 4 days and nights (and countless cups of coffee ☕ and snacks also) to bring it to life, but every second was worth it if it helps us connect.
                 
                 This isn’t just about coding—it’s about getting to know the amazing person behind the smile I’ve admired from afar. Your answers to the questions (no pressure, promise!) would mean the world to me.
                 
