--- a/5.html
+++ b/5.html
@@ -34,7 +34,9 @@
                 
                 Thank you for taking the time to read this and explore the site. It’s my small way of saying, “I truly think you’re extraordinary.”
                 
-                Can’t wait to hear your thoughts 💌 
+                Can’t wait to hear your thoughts 💌  <br>
+                सुना है सब कुछ मिल जाता है दुआ से, <br>
+        अब तुम बताओ, मिलोगे या मांगू खुदा से ! 
                 <br> Again Don't forget to Click on "For You" button at the top right of each page.
             </p>
 
